# PicTalkie-1

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml
docs/: algorithms.md  architecture.md  protocol.md
pictalkie/: __init__.py  app.py  audio.py  baird.py  constants.py  hilbert.py  image.py  theme.json
pictalkie/ui/: __init__.py  components.py  decoder.py  encoder.py  home.py
tests/: test_live_stream.py  test_modem.py  test_round_trip.py
